--- a/docs/llm-briefs/v0.5.30__cache-service__llm-brief.md
+++ b/docs/llm-briefs/v0.5.30__cache-service__llm-brief.md
@@ -1,4 +1,6 @@
-# MGraph-AI Cache Service - LLM Brief
+# MGraph-AI Cache Service - LLM Brief 
+
+**version**: v0.5.30
 
 ## Service Overview
 The MGraph-AI Cache Service is a production-ready, serverless caching system designed for AWS Lambda deployment. It provides intelligent content-addressable storage with multiple caching strategies, backed by AWS S3 with Memory-FS abstraction layer.
@@ -19,7 +21,7 @@ The MGraph-AI Cache Service is a production-ready, serverless caching system des
 
 ## Storage Strategies
 
-The service implements four distinct storage strategies through different `Memory_FS` implementations:
+The service implements five distinct storage strategies through different `Memory_FS` implementations:
 
 ### 1. Direct (`direct`)
 - Simple hash-based storage at `data/direct/`
@@ -42,56 +44,80 @@ The service implements four distinct storage strategies through different `Memor
 - Uses combined handlers: temporal, latest, and versioned
 - Best for: Complete version history with rollback capability
 
+### 5. Semantic File (`semantic_file`) **NEW in v0.5.30**
+- Semantic path-based storage at `data/semantic-file/`
+- Uses `Path__Handler__Semantic_File` for custom path organization
+- Requires both `cache_key` (used as file path) and optionally `file_id`
+- Best for: Human-readable paths, organized folder structures, predictable file locations
+
 ## API Endpoints
 
 ### Storage Operations
 
 #### String Storage
 ```
-POST /cache/store/string/{strategy}/{namespace}
+# Basic (auto-generated hash)
+POST /{namespace}/{strategy}/store/string
+
+# With custom cache key (NEW in v0.5.30)
+POST /{namespace}/{strategy}/store/string/{cache_key:path}
 ```
 - Body: Raw string data
-- Auto-generates hash from content
+- Auto-generates hash from content or uses provided cache_key
+- Optional `file_id` parameter for custom file naming
 - Returns: `Schema__Cache__Store__Response`
 
 #### JSON Storage
 ```
-POST /cache/store/json/{strategy}/{namespace}
+# Basic (auto-generated hash)
+POST /{namespace}/{strategy}/store/json
+
+# With custom cache key (NEW in v0.5.30)
+POST /{namespace}/{strategy}/store/json/{cache_key:path}
 ```
 - Body: JSON object
 - Sorted keys for consistent hashing
+- Optional `file_id` parameter for custom file naming
 - Returns: `Schema__Cache__Store__Response`
 
 #### Binary Storage
 ```
-POST /cache/store/binary/{strategy}/{namespace}
+# Basic (auto-generated hash)
+POST /{namespace}/{strategy}/store/binary
+
+# With custom cache key (NEW in v0.5.30)
+POST /{namespace}/{strategy}/store/binary/{cache_key:path}
 ```
 - Body: Raw binary data
 - Supports `Content-Encoding: gzip` header
 - Auto-decompresses for hash calculation if compressed
+- Optional `file_id` parameter for custom file naming
 - Returns: `Schema__Cache__Store__Response`
 
 ### Retrieval Operations
 
 #### Generic Retrieval (with metadata)
 ```
-GET /cache/retrieve/by-hash/{cache_hash}/{namespace}
-GET /cache/retrieve/by-id/{cache_id}/{namespace}
+GET /{namespace}/retrieve/hash/{cache_hash}
+GET /{namespace}/retrieve/{cache_id}
+GET /{namespace}/retrieve/details/{cache_id}
+GET /{namespace}/retrieve/details/all/{cache_id}
 ```
 - Returns data with type information and metadata
 - Binary data returns URL redirect instead of inline data
+- Details endpoints provide configuration and reference information
 
 #### Type-Specific Retrieval
 ```
 # By ID
-GET /cache/retrieve/string/by-id/{cache_id}/{namespace}
-GET /cache/retrieve/json/by-id/{cache_id}/{namespace}
-GET /cache/retrieve/binary/by-id/{cache_id}/{namespace}
+GET /{namespace}/retrieve/{cache_id}/string
+GET /{namespace}/retrieve/{cache_id}/json
+GET /{namespace}/retrieve/{cache_id}/binary
 
 # By Hash
-GET /cache/retrieve/string/by-hash/{cache_hash}/{namespace}
-GET /cache/retrieve/json/by-hash/{cache_hash}/{namespace}
-GET /cache/retrieve/binary/by-hash/{cache_hash}/{namespace}
+GET /{namespace}/retrieve/hash/{cache_hash}/string
+GET /{namespace}/retrieve/hash/{cache_hash}/json
+GET /{namespace}/retrieve/hash/{cache_hash}/binary
 ```
 - Returns data in appropriate format
 - Binary endpoints return `application/octet-stream`
@@ -100,11 +126,23 @@ GET /cache/retrieve/binary/by-hash/{cache_hash}/{namespace}
 
 ### Management Operations
 ```
-GET /cache/exists/{cache_hash}/{namespace}
-GET /cache/namespaces
-GET /cache/stats/namespaces/{namespace}
-GET /cache/stats/namespaces
-DELETE /cache/delete/by-id/{cache_id}/{namespace}
+GET /{namespace}/exists/hash/{cache_hash}
+GET /{namespace}/file-hashes
+GET /{namespace}/file-ids
+GET /{namespace}/stats
+GET /server/namespaces
+DELETE /{namespace}/delete/{cache_id}
+```
+
+### Storage Admin Operations
+```
+GET /admin/storage/bucket-name
+GET /admin/storage/file/exists/{path:path}
+GET /admin/storage/file/bytes/{path:path}
+GET /admin/storage/file/json/{path:path}
+GET /admin/storage/files/parent-path
+GET /admin/storage/files/all/{path:path}
+GET /admin/storage/folders
 ```
 
 ### Service Information
@@ -113,6 +151,42 @@ GET /info/health          # Returns: {'status': 'ok'}
 GET /info/server          # Server info including Fast_API details
 GET /info/status          # Service status with environment
 GET /info/versions        # All dependency versions
+```
+
+## Enhanced Path Control (NEW in v0.5.30)
+
+### Semantic File Strategy
+The `semantic_file` strategy enables full control over file paths within the cache:
+
+```python
+# Example: Organizing files by project and date
+POST /production/semantic_file/store/json/projects/alpha/2025/01?file_id=config.ext
+Body: {"settings": {...}}
+
+# This creates a file at:
+# data/semantic-file/projects/alpha/2025/01/config_ext.json   (cache_key='projects/alpha/2025/01', file_id = 'config_ext' (sanitized via Safe_Str__Id)  
+```
+
+### Custom File IDs
+All storage endpoints now support an optional `file_id` parameter:
+
+```python
+# Example: Using custom file_id with temporal strategy
+POST /production/temporal/store/json/user/preferences?file_id=user-12345
+Body: {"theme": "dark", "language": "en"}
+
+# Creates files with 'user-12345' as the identifier instead of auto-generated UUID
+```
+
+### Combined Cache Key and File ID
+For maximum flexibility, combine `cache_key` (path) with `file_id`:
+
+```python
+# Example: Semantic path with custom identifier
+POST /production/semantic_file/store/json/reports/monthly/sales?file_id=2025-01-sales
+Body: {"revenue": 150000, "units": 500}
+
+# Creates: data/semantic-file/reports/monthly/sales/2025-01-sales.json
 ```
 
 ## Data Model
@@ -153,6 +227,7 @@ GET /info/versions        # All dependency versions
 {
   "cache_id": "uuid-format",
   "hash": "16-char-hash",
+  "namespace": "production",
   "paths": {
     "data": ["path/to/data/files"],
     "by_hash": ["refs/by-hash/paths"],
@@ -169,7 +244,7 @@ GET /info/versions        # All dependency versions
   "metadata": {
     "cache_hash": "hash",
     "cache_id": "uuid",
-    "cache_key_data": "original-key",
+    "cache_key": "original-key",
     "stored_at": "timestamp",
     "strategy": "temporal_latest",
     "namespace": "default",
@@ -199,11 +274,6 @@ GET /info/versions        # All dependency versions
 
 ## Implementation Details
 
-### Request Body Handling
-- Uses custom `BodyReaderMiddleware` for async body reading
-- Body stored in `request.state.body` for sync access
-- Supports POST, PUT, PATCH methods
-
 ### Hash Generation (`Cache__Hash__Generator`)
 - Consistent hashing across data types
 - JSON: Sorted keys for deterministic hashing
@@ -211,7 +281,7 @@ GET /info/versions        # All dependency versions
 - Binary: Direct hash calculation
 - Type_Safe objects: Converted to JSON first
 
-### Compression Support
+### Compression Support (in some store methods)
 - Auto-detects `Content-Encoding: gzip`
 - Decompresses for hash calculation
 - Stores compressed version for efficiency
@@ -235,8 +305,8 @@ GET /info/versions        # All dependency versions
 ### Dependencies
 ```python
 LAMBDA_DEPENDENCIES__FAST_API_SERVERLESS = [
-    'osbot-fast-api-serverless==v1.17.0',
-    'memory-fs==0.20.0'
+    'osbot-fast-api-serverless==v1.19.0',
+    'memory-fs==v0.24.0'
 ]
 ```
 
@@ -257,6 +327,7 @@ LAMBDA_DEPENDENCIES__FAST_API_SERVERLESS = [
 - **Audit requirements**: Use `temporal_versioned`
 - **Simple caching**: Use `direct`
 - **Time-series data**: Use `temporal`
+- **Organized structure**: Use `semantic_file` with meaningful paths
 
 ### Performance Optimization
 - Hash sharding distributes S3 load
@@ -286,7 +357,7 @@ LAMBDA_DEPENDENCIES__FAST_API_SERVERLESS = [
 - Separate S3 prefixes per namespace
 
 ## Version Information
-- Current version: v0.5.15
+- Current version: v0.5.30
 - Python package: `mgraph_ai_service_cache`
 - FastAPI framework with OpenAPI 3.1.0
 - AWS Lambda runtime compatible
@@ -304,22 +375,47 @@ class CacheClient:
     
     def store_json(self, data, strategy="temporal_latest", namespace="default"):
         response = requests.post(
-            f"{self.base_url}/cache/store/json/{strategy}/{namespace}",
+            f"{self.base_url}/{namespace}/{strategy}/store/json",
             json=data
         )
         return response.json()
     
+    def store_semantic_json(self, data, path, namespace="default", file_id=None):
+        """Store JSON with semantic path (NEW in v0.5.30)"""
+        url = f"{self.base_url}/{namespace}/semantic_file/store/json/{path}"
+        params = {"file_id": file_id} if file_id else {}
+        response = requests.post(url, json=data, params=params)
+        return response.json()
+    
     def retrieve_by_hash(self, cache_hash, namespace="default"):
         response = requests.get(
-            f"{self.base_url}/cache/retrieve/by-hash/{cache_hash}/{namespace}"
+            f"{self.base_url}/{namespace}/retrieve/hash/{cache_hash}"
         )
         return response.json()
     
     def delete_by_id(self, cache_id, namespace="default"):
         response = requests.delete(
-            f"{self.base_url}/cache/delete/by-id/{cache_id}/{namespace}"
+            f"{self.base_url}/{namespace}/delete/{cache_id}"
         )
         return response.json()
+```
+
+### Semantic File Organization Example (NEW)
+```python
+# Organize cache by date and category
+def cache_daily_report(client, date, category, report_data):
+    path = f"reports/{date.year}/{date.month:02d}/{date.day:02d}/{category}"
+    file_id = f"{category}-{date.isoformat()}"
+    
+    return client.store_semantic_json(
+        data=report_data,
+        path=path,
+        namespace="analytics",
+        file_id=file_id
+    )
+
+# Result: Creates file at:
+# data/semantic-file/reports/2025/01/16/sales/sales-2025-01-16.json
 ```
 
 ### Handling Binary Data with Compression
@@ -335,7 +431,7 @@ def cache_compressed_file(file_path, namespace="files"):
     compressed = gzip.compress(content)
     
     response = requests.post(
-        f"https://cache.dev.mgraph.ai/cache/store/binary/temporal_versioned/{namespace}",
+        f"https://cache.dev.mgraph.ai/{namespace}/temporal_versioned/store/binary",
         data=compressed,
         headers={"Content-Encoding": "gzip"}
     )
